--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A history of browsers</title>
+    <script src="style.css"></script>
 </head>
 <body>
     <h1>A history of browsers</h1>
